      inventorized checks > Various applications > Logwatch Patterns)
    * Users & Contacts: Added new option wato_hidden_users which holds a list
      of userids to hide the listed users from the WATO user management GUI.
    * WATO API: Added new method rewrite_configuration to trigger a rewrite of
      all host related wato configuration files to distribute changed tags

    Multisite
    * Added config option default_ts_format to configure default timestamp
      output format in multisite
    * BI: Added new painter "affected hosts (link to host page)" to show all
      host names with links to the "hosts" view
    * Layout and design update
    * Quicksearch: display site name if more than one different site
      is present in the current search result list
    * FIX: Fixed encoding problem in "custom notification" message
    * New configuration parameter page_heading for the HTML page heads
      of the main frameset (%s will be replaced with OMD site name)
    * FIX: Fix problem where snapins where invisible
    * FIX: Fixed multisite timeout errors when nagios not running

    BI
    * FIX: Fixed filtering of Single-Host Aggregations
    * New sorter for aggregation group
    * FIX: fix sorting of Single-Host Aggregations after group
    * Avoid duplicate rule incarnations when using FOREACH_*
    * BI Boxes: allow closing boxes (not yet persisted)
    * New filter for services (not) contained in any aggregate
    * Configure sorting for all BI views

    Checks & Agents:
    * FIX: snmp_uptime handles empty snmp information without exception
    * FIX: Oracle checks try to handle ORA-* errors reported by the agent
      All oracle checks will return UNKNOWN when finding an ORA-* message
    * FIX: filesystem levels set via WATO didn't work, but do now
    * FIX: Group filters can handle groups without aliases now
    * nfsmounts: Added nfs4 support thanks to Thorsten Hintemann